# cpp_assingment3

./: CMakeLists.txt  Rational.cpp  Rational.h  RationalCalc.cpp  RationalCalc.h  RationalProcessor.cpp  RationalProcessor.h  main.cpp
